<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ViewStudentActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_avatar"
        />

    <TextView
        android:id="@+id/viewstudent_namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/name_label"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/viewstudent_namevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/default_textview_value"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/viewstudent_namelabel"
        app:layout_constraintStart_toStartOf="@+id/viewstudent_addressvalue"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/viewstudent_idlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/id_label"
        app:layout_constraintTop_toBottomOf="@+id/viewstudent_namelabel"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/viewstudent_idvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/default_textview_value"
        app:layout_constraintTop_toBottomOf="@+id/viewstudent_namevalue"
        app:layout_constraintStart_toStartOf="@+id/viewstudent_addressvalue"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/viewstudent_phonelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_label"
        app:layout_constraintTop_toBottomOf="@+id/viewstudent_idlabel"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/viewstudent_phonevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/default_textview_value"
        app:layout_constraintTop_toBottomOf="@+id/viewstudent_idvalue"
        app:layout_constraintStart_toStartOf="@+id/viewstudent_addressvalue"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/viewstudent_addresslabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/address_label"
        app:layout_constraintTop_toBottomOf="@+id/viewstudent_phonelabel"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/viewstudent_addressvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/default_textview_value"
        app:layout_constraintTop_toBottomOf="@+id/viewstudent_phonevalue"
        app:layout_constraintStart_toEndOf="@+id/viewstudent_addresslabel"
        android:textSize="15sp"
        />

    <CheckBox
        android:id="@+id/viewstudent_ischecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/viewstudent_addresslabel"
        app:layout_constraintStart_toStartOf="@+id/viewstudent_addresslabel"
        android:layout_marginTop="30dp"
        android:text="@string/checked_label"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/viewstudent_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@android:color/darker_gray"
        />


</androidx.constraintlayout.widget.ConstraintLayout>